# zoeae

./: .gitignore  CHANGELOG.md  EXOSKELETON_GATE.md  LICENSE  README.md  SAFETY_SPEC.md  UMPH.md  clawtonomy.py  index.ts  openclaw.plugin.json  package.json  pyproject.toml  safety.yaml  seed_genome.py  tsconfig.json
python/tests/: test_zoeae.py
python/zoeae/: __main__.py  blood.py  brain.py  compiler.py  diversity.py  ecosystem.py  exoskeleton.py  genome.py  gut.py  mouth.py  muscle.py  nerve.py  ocean.py  pipeline.py  router.py  shell.py  tail.py  telemetry.py  tropism.py  xr.py
python/zoeae/feeds/: __init__.py  ecoflow.py  router.py
rust/: Cargo.toml
rust/src/: lib.rs  main.rs
rust/src/organs/: antenna.rs  blood.rs  exoskeleton.rs  eye.rs  gill.rs  gut.rs  heart.rs  mod.rs  mouth.rs  muscle.rs  nerve.rs  shell.rs  spawn.rs  swim.rs  tail.rs
src/: activity-log.ts  agent-pool.ts  autonomy-client.ts  autonomy.ts  daemon.ts  dashboard.ts  dream-engine.ts  executor.ts  mcp-server.ts  ollama-client.ts  policy.ts  services.ts  task-engine.ts
tests/: test_brain.py  test_full_stack.py
tools/: mail.py  seed_genome.py  zoeae.py
ts/: openclaw.plugin.json  package.json
ts/src/: agent-pool.ts  autonomy.ts  dashboard.ts  dream-engine.ts  ecosystem-tools.ts  executor.ts  k1c-bridge.ts  mcp-server.ts  paths.ts  planner.ts  room-engine.ts  services.ts  task-engine.ts
zoeae/: __init__.py  accumulator.py  antenna.py  crab.py  explorer.py  eye.py  gill.py  hands.py  heart.py  instinct.py  messenger.py  molt.py  organism.py  shoes.py  spawn.py  swim.py
zoeae/feeds/: arduino.py  arduino_env.ino  geiger.py  klipper.py  look.py  nanovna.py  solar.py
