[project]
name = "zoeae"
version = "0.5.0"
description = "A living orchestration runtime with developmental perception."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [{name = "AnnulusLabs LLC"}]
keywords = ["orchestration", "runtime", "autonomous", "security", "openclaw", "perception"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
]

[project.urls]
Homepage = "https://github.com/AnnulusLabs/zoeae"
Repository = "https://github.com/AnnulusLabs/zoeae"
Issues = "https://github.com/AnnulusLabs/zoeae/issues"

[project.scripts]
zoeae = "zoeae.xr:main"
zoeae-msg = "zoeae.messenger:main"

[project.optional-dependencies]
examples = ["numpy"]
dev = ["pytest"]

[tool.setuptools.packages.find]
include = ["zoeae*"]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
